# Simple_CPU_Ray_Tracer

./: CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
